package mcloudapps.connectFour.controllers;

public interface AcceptorController {
    void accept(ControllersVisitor controllerVisitor);
}
