package mcloudapps.connectFour.models;

public enum StateValue {
    INITIAL,
    IN_GAME,
    RESUME,
    EXIT
}
