package mcloudapps.connectFour.views;

import mcloudapps.connectFour.controllers.ControllersVisitor;

public interface  View extends ControllersVisitor {
    
}
